--- a/Details/Cell/DetailsCell.xib
+++ b/Details/Cell/DetailsCell.xib
@@ -19,7 +19,7 @@
             <rect key="frame" x="0.0" y="0.0" width="72" height="100"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Ggg-hm-BNI">
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tomHolland" translatesAutoresizingMaskIntoConstraints="NO" id="Ggg-hm-BNI">
                     <rect key="frame" x="0.0" y="0.0" width="72" height="76"/>
                     <color key="backgroundColor" red="0.61661910519999996" green="1" blue="0.6109868678" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                     <constraints>
@@ -27,7 +27,7 @@
                         <constraint firstAttribute="width" constant="72" id="gej-Tr-GDq"/>
                     </constraints>
                 </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6yS-g5-jlY">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tom Holland" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6yS-g5-jlY">
                     <rect key="frame" x="0.0" y="80" width="72" height="16"/>
                     <fontDescription key="fontDescription" name="MulishRoman-Regular" family="Mulish" pointSize="12"/>
                     <nil key="textColor"/>
@@ -53,6 +53,7 @@
         </view>
     </objects>
     <resources>
+        <image name="tomHolland" width="1200" height="1772"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
