--- a/MovieApp/UI/Home/HomeCells/CollectionViewCell/HomeCollectionViewCell.xib
+++ b/MovieApp/UI/Home/HomeCells/CollectionViewCell/HomeCollectionViewCell.xib
@@ -19,9 +19,9 @@
             <rect key="frame" x="0.0" y="0.0" width="143" height="283"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="5W5-vT-diX">
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="theGodfather" translatesAutoresizingMaskIntoConstraints="NO" id="5W5-vT-diX">
                     <rect key="frame" x="0.0" y="0.0" width="143" height="212"/>
-                    <color key="backgroundColor" red="0.84923311450000005" green="1" blue="0.83162576610000005" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                    <color key="backgroundColor" systemColor="tintColor"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="212" id="Sup-z0-rHp"/>
                         <constraint firstAttribute="width" constant="143" id="Zih-ja-Zg7"/>
@@ -76,8 +76,12 @@
     </objects>
     <resources>
         <image name="clock" width="10" height="11"/>
+        <image name="theGodfather" width="1396" height="1982"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="tintColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
