--- a/MovieApp/UI/Home/HomeVC.xib
+++ b/MovieApp/UI/Home/HomeVC.xib
@@ -8,8 +8,8 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
-        <array key="Merriweather-Bold.ttf">
-            <string>Merriweather-Bold</string>
+        <array key="Merriweather-Black.ttf">
+            <string>Merriweather-Black</string>
         </array>
     </customFonts>
     <objects>
@@ -26,8 +26,8 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Now Showing" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C5S-SV-6sl">
-                    <rect key="frame" x="24" y="64" width="138.5" height="25.5"/>
-                    <fontDescription key="fontDescription" name="Merriweather-Bold" family="Merriweather" pointSize="20"/>
+                    <rect key="frame" x="24" y="64" width="139.5" height="25.5"/>
+                    <fontDescription key="fontDescription" name="Merriweather-Black" family="Merriweather" pointSize="20"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
@@ -45,13 +45,13 @@
                     </collectionViewFlowLayout>
                 </collectionView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Popular" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cKc-X8-miO">
-                    <rect key="frame" x="24" y="413.5" width="79" height="26"/>
-                    <fontDescription key="fontDescription" name="Merriweather-Bold" family="Merriweather" pointSize="20"/>
+                    <rect key="frame" x="24" y="413.5" width="80" height="25.5"/>
+                    <fontDescription key="fontDescription" name="Merriweather-Black" family="Merriweather" pointSize="20"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="EFJ-hp-tpt">
-                    <rect key="frame" x="24" y="463.5" width="366" height="398.5"/>
+                    <rect key="frame" x="24" y="463" width="366" height="399"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                 </tableView>
             </subviews>
